back-deployement.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: backend:latest
          ports:
            - containerPort: 8000

          readinessProbe:
            httpGet:
              path: /api/v1/utils/health-check/
              port: 8000
            initialDelaySeconds: 10
            periodSeconds: 10

          livenessProbe:
            httpGet:
              path: /api/v1/utils/health-check/
              port: 8000
            initialDelaySeconds: 30
            periodSeconds: 10
