adminer-service.yml
apiVersion: v1
kind: Service
metadata:
  name: adminer
spec:
  type: ClusterIP
  selector:
    app: adminer
  ports:
    - name: http
      port: 8080
      targetPort: 8080
